[gd_scene load_steps=6 format=2]

[ext_resource path="res://Source 9-3-2021/Enemies/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Refactored Images/spr_enemy_spid.png" type="Texture" id=2]
[ext_resource path="res://Source 9-3-2021/Enemies/Enemy_Spid.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Move"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9, 10, 11, 12, 13 ]
}

[node name="Enemy_Spid" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 2 )
offset = Vector2( 0, -5 )
hframes = 14

[node name="MoveRay" type="RayCast2D" parent="." index="2"]
modulate = Color( 0.682353, 0.858824, 0.0509804, 1 )
enabled = true
cast_to = Vector2( 16, 0 )
collide_with_areas = true

[node name="TweenMove" type="Tween" parent="." index="3"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="4"]
autoplay = "Idle"
anims/Idle = SubResource( 1 )
anims/Move = SubResource( 2 )

[node name="Timer" type="Timer" parent="." index="5"]
autostart = true

[node name="DetectionRays" type="Node2D" parent="." index="6"]

[node name="RightRay" type="RayCast2D" parent="DetectionRays" index="0"]
enabled = true
cast_to = Vector2( 16, 0 )
collision_mask = 49
collide_with_areas = true

[node name="LeftRay" type="RayCast2D" parent="DetectionRays" index="1"]
enabled = true
cast_to = Vector2( -16, 0 )
collision_mask = 49
collide_with_areas = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
